# Multi-agent-research-chatbot

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
backend/custom_agents/: agent_1.py
backend/data/: README.md
backend/src/: deep_research.py
backend/src/custom_agents/: report_agent.py  research_assistant_agent.py  research_readiness_agent.py  researcher_agent.py
backend/src/mcp_servers/: search_mcp.py
backend/src/models/: research_result.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/MyRuntimeProvider/: MyRuntimeProvider.tsx
