[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.120.1",
    "langfuse>=3.8.1",
    "openai-agents>=0.4.2",
    "openinference-instrumentation-openai-agents>=1.3.0",
]
